--- a/style.css
+++ b/style.css
@@ -24,13 +24,46 @@ body {
 }
 
 .display {
-  width: 80%;
-  height: 20%;
+  width: 360px;
+  height: 100px;
   border: 1px solid black;
-  margin: 5%;
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: flex-end;
+  padding-right: 20px;
+}
+
+.recent-display {
+  font-size: 1.2rem;
+}
+
+.current-display {
+  font-size: 2rem;
 }
 
 .buttons {
-  width: 80%;
-  margin: 5%;
+  width: 360px;
+  height: 440px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-content: space-between;
+  margin: 5% 0;
+  gap: 5%
+}
+
+.buttons > button {
+  font-size: 1.5rem;
+  flex: 1 0 60px;
+  height: 60px;
+}
+
+.last-row {
+  margin-bottom: 0;
+}
+
+#button-0 {
+  flex: 1 0 155px;
 }
